texi2html/test/invalid/multitable_begin_with_tab.texi
\input texinfo @c -*-texinfo-*-

@setfilename multitable_begin_with_tab.info

@node Top
@top Test for tab beginning a multitable

@multitable {a} {b}
@tab t
@end multitable

@multitable {c} {d}
@tab t2
@item it
@end multitable

@bye
